fix main title too large

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -7,6 +7,12 @@
     padding: 2rem 2.5rem;
   }
 
+  .main-title {
+    h2 {
+      font-size: 2.8rem;
+    }
+  }
+
   .controls {
     top: auto;
     bottom: 0;
