--- a/styles/styles.css
+++ b/styles/styles.css
@@ -872,6 +872,9 @@ section {
   .section {
     padding: 2rem 2.5rem;
   }
+  .main-title h2 {
+    font-size: 2.8rem;
+  }
   .controls {
     top: auto;
     bottom: 0;
